create fragments part 4 and link page together

--- a/app/src/main/res/layout/add_vaccine_fragment.xml
+++ b/app/src/main/res/layout/add_vaccine_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragments.vaccines.add_vaccine.AddVaccineFragment">
+    tools:context=".ui.fragments.vaccines_clinic.add_vaccine.AddVaccineFragment">
 
     <TextView
         android:layout_width="wrap_content"
